21 Apr 2006 Apple OS X 10.4.6 TUNTAP_ClrIPAddr (ioctl(SIOCDIFADDR))
            patch by Kees Verruijt [kees@verruijt.net] - Fish
21 Apr 2006 tt32 v3.1: replace tt32stats cmd with tt32 cmd - Fish
21 Apr 2006 tt32 v3.1: new "tuntap32_build_herc_iface_mac" function - Fish
21 Apr 2006 tt32 v3.1: new "_ex" functions - Fish
21 Apr 2006 LCS support for RARP frames - Fish
21 Apr 2006 TUNTAP_GetFlags: don't read LCS adapter until iface is IFF_UP
            (resolves "HHCLC042E port 00: Read error" issue) - Fish
19 Apr 2006 Re-fix panel refresh (fill_text, not erase_to_eol; sigh) - Fish
14 Apr 2006 RECFM bits in dasdblks.h (correction by Christophe Nillon) - Roger Bowler
12 Apr 2006 SYNCHRONIZE_CPUS macro in place of synchronize_broadcast - Greg
10 Apr 2006 Portability: change bitfield types from BYTE to u_int - Fish
09 Apr 2006 Transparently handle BSD sockaddr_in sin_len - Fish
09 Apr 2006 Un-"fix" panel.c refresh (sigh) - Fish
09 Apr 2006 Fix bug causing bogus routing table setup for CTCI - Bjoern Zeeb
09 Apr 2006 Added likely/unlikely statements dyncrypt.c - Bernard vd Helm
08 Apr 2006 Added likely/unlikely statements cmpsc.c - Bernard van der Helm
07 Apr 2006 New 'PANTITLE' config stmt to set console/panel title - Fish
06 Apr 2006 PR# 34/tape: prevent tape mount unless no tape mounted - Fish
06 Apr 2006 Missed a scsimount detach/devinit bug - Fish
06 Apr 2006 PR# 53/tape: Bus-Tech compressed AWS file support - Fish
06 Apr 2006 PR# 70/tape: AWS tapes 2GB filesize limitation - Fish
05 Apr 2006 PR# 18/tape: Herc very slow initializing if no tape in SCSI
            tape drive, PR# 48/tape: Tape mount/unmount messages still
            not handled correctly, fix bsr/fsr in light of 01 Apr 2006
            w32stape fixes for utilities, tweak to auto-scsi-mount logic
            to eliminate(?) WIN32 drive query inefficiencies - Fish
05 Apr 2006 fix(?) panel.c to always refresh the New Panel display,
            fix minor New Panel device status painting glitch - Fish